# template-nucleo-F411RE

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: convco.yml  rust.yml
src/: main.rs
